[gd_scene load_steps=3 format=2]

[ext_resource path="res://States/OptionsMenu/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/IHateComicSansSmaller.tres" type="DynamicFont" id=2]

[node name="OptionsMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 473.0
margin_top = 170.0
margin_right = 806.0
margin_bottom = 550.0
custom_constants/separation = 35

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 333.0
margin_bottom = 75.0
text = "Options"
align = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 333.0
margin_bottom = 158.0
custom_constants/hseparation = 32
columns = 4

[node name="JumpTitle" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 3.0
margin_right = 93.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Jump: "

[node name="JumpKeys" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 125.0
margin_top = 3.0
margin_right = 125.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )

[node name="AddJumpButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 157.0
margin_right = 220.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "Add"

[node name="ResetJumpButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 252.0
margin_right = 333.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "Clear"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 41.0
margin_top = 193.0
margin_right = 291.0
margin_bottom = 297.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteToggle" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "Sound:"

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 250.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen:"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
margin_left = 117.0
margin_top = 332.0
margin_right = 215.0
margin_bottom = 380.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Return"

[connection signal="pressed" from="VBoxContainer/GridContainer/AddJumpButton" to="." method="_on_AddJumpButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ResetJumpButton" to="." method="_on_ResetJumpButton_pressed"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/MuteToggle" to="." method="_on_MuteToggle_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/FullscreenToggle" to="." method="_on_FullscreenToggle_toggled"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
